# mini-power

./: README.md
code/: Cargo.toml  cfg.toml.tmp  partitions.csv  sdkconfig.defaults
code/src/: currentlogs.rs  displayctl.rs  httpserver.rs  keyevent.rs  main.rs  syslogger.rs  transfer.rs  usbpd.rs  wifi.rs
hardware/: bom.csv  mini-power.kicad_pcb  mini-power.kicad_prl  mini-power.kicad_pro  mini-power.kicad_sch
hardware/Container/: body.3mf  button.3mf  mini-power.f3d  upper.3mf
hardware/Library.pretty/: ESSOP-10_3.9x4.9mm_P1.00mm.kicad_mod  FingerTouchPad_34x35mm.kicad_mod  IC18_ESP32-C3-WROOM-02-N4_EXP.kicad_mod  L_CHPH4D19FNP.kicad_mod  OLED I2C DISPLAY.kicad_mod  R_10mOHM.kicad_mod  TB112-2-2-3-E-1 Terminal Block.kicad_mod  TS-06104.kicad_mod  TestPoint_Pad_3.2x1.6mm.kicad_mod  USB_C_5077CR-16-SMC2-BK-TR.kicad_mod  W-QFN4040-24_Type_A1_DIO.kicad_mod  WS-TASV SMT Tact Switch.kicad_mod
influxdb/: mimi-power.json
